2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* Info.cs: Typo in HDD superblock, not allocating enough
	memory.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* CPM.cs:
	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Xattr.cs:
	* Super.cs:
	* Consts.cs:
	* Structs.cs:
	* cpmdefs.xml:
	* Definitions.cs:
	* DiscImageChef.Filesystems.csproj: Added CP/M filesystem,
	closes #29.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs: Typo.

2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Super.cs:
	* Xattr.cs:
	* Extent.cs:
	* Structs.cs:
	* DiscImageChef.Filesystems.csproj: Separate Lisa tag decoding
	from Lisa filesystem and added Priam tags.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* exFAT.cs:
	* DiscImageChef.Filesystems.csproj: Added support for exFAT,
	this closes #15.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Filesystems.csproj: Bumped version to
	3.2.99.2.

2016-08-08  Natalia Portillo  <claunia@claunia.com>

	* FFS.cs:
	* BFS.cs:
	* ODS.cs:
	* FAT.cs:
	* APFS.cs:
	* NTFS.cs:
	* SysV.cs:
	* HPFS.cs:
	* Opera.cs:
	* Acorn.cs:
	* extFS.cs:
	* BTRFS.cs:
	* ext2FS.cs:
	* ProDOS.cs:
	* SolarFS.cs:
	* UNIXBFS.cs:
	* ISO9660.cs:
	* MinixFS.cs:
	* AmigaDOS.cs:
	* PCEngine.cs:
	* AppleHFS.cs:
	* AppleHFSPlus.cs:
	* Info.cs: Do not try to read past partition end.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Filesystems.csproj: Public beta release
	3.2.99.1.

2016-08-03  Natalia Portillo  <claunia@claunia.com>

	* SysV.cs: Corrected XENIX 3 superblock information.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Filesystems.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs: Change trick to use LisaOS path separator.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Filesystems.csproj: Bump to version 3.2.0
