@@ -97,6 +97,7 @@
     <Compile Include="CPM\Consts.cs" />
     <Compile Include="CPM\File.cs" />
     <Compile Include="CPM\Xattr.cs" />
+    <Compile Include="QNX4.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
