@@ -1,3 +1,9 @@
+2016-09-02  Natalia Portillo  <claunia@claunia.com>
+
+	* QNX4.cs:
+	* DiscImageChef.Filesystems.csproj: Adds support for QNX4
+	filesystem. #18
+
 2016-08-26  Natalia Portillo  <claunia@claunia.com>
 
 	* Info.cs: Typo in HDD superblock, not allocating enough
